--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 }
 
 * {
-  cursor: url('https://cur.cursors-4u.net/nature/nat-6/nat584.cur'), auto !important;
+  cursor: url('/images/earth-cursor.cur'), auto !important;
 }
 
 body {
